Closed
Bug 1731526
Opened 3 years ago
Closed 3 years ago
Fix non-unified build errors in accessible/
Categories
(Core :: Disability Access APIs, defect, P3)
Tracking
()
RESOLVED
FIXED
94 Branch
People
(Reporter: cpeterson, Assigned: cpeterson)
References
Details
Attachments
(1 file)
Building with ac_add_options --disable-unified-build
on macOS hits the following -Wunreachable-code-return warnings-as-errors:
accessible/base/TreeWalker.cpp:151:10: error: 'return' will never be executed [-Werror,-Wunreachable-code-return]
accessible/xpcom/xpcAccessibleMacInterface.mm:177:10: error: 'return' will never be executed [-Werror,-Wunreachable-code-return]
Assignee | ||
Comment 1•3 years ago
|
||
accessible/base/TreeWalker.cpp:151:10: error: 'return' will never be executed [-Werror,-Wunreachable-code-return]
accessible/xpcom/xpcAccessibleMacInterface.mm:177:10: error: 'return' will never be executed [-Werror,-Wunreachable-code-return]
Pushed by cpeterson@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/998408ac9046
Fix non-unified build errors in accessible/. r=eeejay
Comment 4•3 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 94 Branch
Assignee | ||
Updated•3 years ago
|
Blocks: non-unified
You need to log in
before you can comment on or make changes to this bug.
Description
•